# .claude

./: .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  PORTING-NOTES.md  README.md  ROLLOUT.md  bootstrap.sh  managed-settings.json  pyproject.toml  settings.json  setup.sh  statusline-command.sh  statusline-robbyrussell.sh
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
agents/: architect-context-recon.md  architect.md  code-reviewer.md  database-engineer.md  fix-engineer.md  frontend-engineer.md  infrastructure-engineer.md  patch-critic.md  pbt-engineer.md  plan-cache-adapter.md  planning-agent.md  product-reviewer.md  qa-engineer.md  sandbox-verify-engineer.md  security-engineer.md  session-memory-updater.md  software-engineer.md  spec-blind-validator.md  vlm-critic.md
automation/: backend.sh  check-shebangs.sh  config.sh  daemon.sh  default.env.example  github.sh  jira.sh  pool.sh  process-ticket.sh  prompt-template.md  repos.conf  supervisor.sh
codebase_map/: __init__.py  build.py  cli.py  graph.py  render.py  tags.py  tags_types.py
db/: schema.sql
docs/: CONFIGURATION.md  SETUP.md  TICKET-AUTOMATION.md
eval/: README.md
hooks/: agent-skill-reminder.sh  agentic-security-gate.sh  arch-fitness-gate.sh  auto-bug-detect.sh  auto-learn-gate.sh  auto-pr.sh  auto-reduce-permissions.sh  bash-write-guard.sh  block-ask-user.sh  bug-fixed-payload-validator.sh  build-loop-scan.sh  cache-breakpoint-injector.sh  cc-check.sh  cloud-bootstrap.sh  code-shape-check.sh  codebase-map-poll.sh  codebase-map-rebuild.sh  comment-smell-check.sh  commit-checkpoint.sh  config-protection.sh  context-warning.sh  cost-feed.sh  cost-tracker.sh  deploy-outcome-audit.sh  depth-guard.sh  eval-anti-hack-lint.sh  eval-capture-on-merge.sh  function-body-check.sh  gear-announce.sh  governance-capture.sh  harness-audit-advisory.sh  harness-dependency-gate.sh  hook-profile.sh  hook-self-test.sh  hooks.json  injection-scan.sh  instinct-injector.sh  intake-backstop.sh  intake-fingerprint-audit.sh  intake-reminder.sh  (+59 more)
knowledge/: a11y-overrides.example.json  agent-skill-matrix.md  api-patterns.md  auth-patterns.md  background-job-patterns.md  backup-dr-patterns.md  caching-patterns.md  database-patterns.md  (+35 more)
(+1888 files in other folders)
